# Recovery-Authority

./: .gitignore  .mcp.json  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.json
.agents/plugins/: marketplace.json
.codex-plugin/: plugin.json
crates/recovery-tui/: Cargo.toml
crates/recovery-tui/src/: main.rs
docs/: ARCHITECTURE.md  THREAT_MODEL.md
hooks/: hooks.json
scripts/: approve-operation.sh  demo-postgres.sh  parse-powershell.ps1  run-pre-tool-hook.sh  smoke-hook.mjs  smoke-mcp.mjs  smoke-sandbox-mcp.mjs  smoke-server-boundary.mjs  start-mcp.sh
src/: approval.ts  approve.ts  atomic-file.ts  authority-daemon.ts  authority.ts  authorization.ts  bash-parser.d.ts  cli.ts  consequence-eval.ts  consequence-graph.ts  contracts.ts  crypto.ts  demo-live.ts  demo.ts  filesystem.ts  git.ts  hook.ts  identity.ts  manifest-approval.ts  manifest-authorization.ts  manifest-contracts.ts  manifest-coordinator.ts  manifest-store.ts  manifest.ts  mcp-proxy.ts  mcp.ts  path-policy.ts  platform.ts  postgres.ts  powershell-policy.ts  pre-tool-hook.ts  purge-vectors.ts  sandbox.ts  server.ts  shell-policy.ts  signer.ts  sqlite.ts  store.ts
tests/: approval.test.ts  authorize.ts  consequence-eval.test.ts  consequence-graph.test.ts  crypto.test.ts  filesystem.test.ts  git.test.ts  identity.test.ts  manifest.test.ts  path-policy.test.ts  platform.test.ts  plugin-config.test.ts  postgres.integration.test.ts  postgres.test.ts  powershell-policy.test.ts  sandbox.integration.test.ts  shell-policy.test.ts  sqlite.test.ts  store-concurrency.test.ts
(+4 files in other folders)
