[workspace]
resolver = "2"
members = ["crates/recovery-core", "crates/recovery-tui"]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
