[package]
name = "recovery-authority"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
crossterm.workspace = true
ratatui.workspace = true
recovery-core = { path = "../recovery-core" }
serde_json.workspace = true
